--- a/ObjektumGyakSZg/Properties/launchSettings.json
+++ b/ObjektumGyakSZg/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ObjektumGyakSZg": {
       "commandName": "Project",
-      "commandLineArgs": "16 -545 0 98 -85 -4444 8888 0 21000 -9856 0 8654"
+      "commandLineArgs": "13 56"
     }
   }
 }
