--- a/ObjektumGyakSZg/Properties/launchSettings.json
+++ b/ObjektumGyakSZg/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ObjektumGyakSZg": {
       "commandName": "Project",
-      "commandLineArgs": "30"
+      "commandLineArgs": "15 25 17"
     }
   }
 }
